--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@
 version: '3.8'
 services:
   mysql:
-    image: mysql:8.0
+    platform: linux/amd64
+    image: mysql:5.7
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: local
+    env_file:
+      - .env
     volumes:
       - mysql_data:/var/lib/mysql
     ports:
