--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     url: jdbc:mysql://localhost:3306/poker?autoReconnect=true
     hikari:
       username: root
-      password:
+      password: local
       pool-name: hikari-cp
       minimum-idle: 10
       maximum-pool-size: 10
@@ -28,5 +28,3 @@ spring:
     redis:
       port: 6379
       host: localhost
-
-
